# SD-2-EKF

./: .gitignore  Build & Flash AMBAR Continuous Test.cmd  Build & Flash AMBAR Normal.cmd  Build & Flash AMBAR Variable HIL.cmd  CMakeLists.txt  README.md  Run AMBAR Continuous HIL Test.cmd  Run AMBAR Variable HIL Hardware Test.cmd  Run AMBAR Variable HIL Test.cmd  Run Continuous HIL Test.cmd  Run Monte Carlo Simulation.cmd  Run Variable HIL Test.cmd  requirements-hil.txt  requirements-simulation.txt
.github/workflows/: verification.yml
docs/: ambar_bom_hardware_notes.md  beginner_quick_start.md  continuous_hil_commissioning.md  continuous_hil_testing.md  datasheet_integration_notes.md  hardware_map.md  m5_report_change_guide.md  m5_report_data_extract.md  monte_carlo_campaign.md  project_requirements.md  project_status.md  sensor_architecture.md  simulation_audit.md  simulation_sandboxes.md  simulation_ui.md  software_architecture.md  source_backed_simulation_inputs.md  v2_schematic_reference.md  v3_kicad_hardware_map.md  variable_hil_testing.md
firmware/rust_controller_reference/: README.md  controller.rs
firmware/stm32_airbrake_pcb/: .cproject  .gitignore  .mxproject  .project  AMBAR Normal.launch  CODE_GUIDE.md  MCU Project EKF PCB Copy Debug.launch  MCU Project EKF PCB Copy.ioc  README.md  STM32H562RGTX_FLASH.ld  STM32H562RGTX_RAM.ld  ambar_continuous_hil.launch
firmware/stm32_airbrake_pcb/Core/Inc/: ambar_actuator.h  ambar_app.h  ambar_command.h  ambar_config.h  ambar_ekf.h  ambar_features.h  ambar_flight.h  ambar_log.h  ambar_usb.h  ambar_variable_hil_policy.h  bmp388.h  lis2mdl.h  lsm6dsv32x.h  main.h  radio_bridge.h  rocket_protocol.h  rocket_sensors.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  sx1280.h  sx1280_port.h  tmc5240.h  w25q64.h
firmware/stm32_airbrake_pcb/Core/Src/: ambar_actuator.c  ambar_app.c  ambar_command.c  ambar_config.c  ambar_ekf.c  ambar_flight.c  ambar_log.c  ambar_usb.c  ambar_variable_hil_policy.c  bmp388.c  lis2mdl.c  lsm6dsv32x.c  main.c  radio_bridge.c  rocket_protocol.c  rocket_sensors.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  sx1280.c  sx1280_port.c  syscalls.c  sysmem.c  system_stm32h5xx.c  tmc5240.c  w25q64.c
firmware/stm32_airbrake_pcb/HostTests/: actuator_autoretract_tests.c  actuator_hil_limit_tests.c  ambar_config_migration_tests.c  bench_replay_tests.py  flight_predictive_solver_tests.c  flight_profile_replay.c  rocket_protocol_tests.c  test_actuator_checkout.py  test_continuous_hil_store.py  test_firmware_profile_verifier.py  test_openrocket_replay.py  test_recover_known_full.py  test_rocket_protocol.py  test_variable_hil_runner.py  test_variable_hil_store.py  variable_hil_policy_tests.c
firmware/stm32_airbrake_pcb/HostTests/actuator_fakes/: main.h  tmc5240.h
firmware/stm32_airbrake_pcb/SimulationData/: 26-07-10_Openrocket_Run_50Hz_DERIVED.csv  26-07-10_Openrocket_Run_50Hz_DERIVED.csv.metadata.json
firmware/stm32_airbrake_pcb/SimulationData/Source/: 26-07-10_Openrocket_Run.csv
firmware/stm32_airbrake_pcb/USBX/App/: ux_device_descriptors.h  ux_user.h
firmware/stm32_airbrake_pcb/tools/arduino_ground_station/AMBAR_Ground_Station/: AMBAR_Ground_Station.ino  README.md
firmware/stm32_airbrake_pcb/tools/usb_protocol/: OPENROCKET_SIMULATION.md  README.md  actuator_checkout.py  probe_usb.py  recover_known_full.py  replay_openrocket.py  replay_reporting.py  rocket_protocol.py  verify_firmware_profile.py
hardware/: README.md
hardware/airbrake_pcb/: README.md  airbrake.kicad_pcb  airbrake.kicad_prl  airbrake.kicad_pro  airbrake.kicad_sch  fp-lib-table  sym-lib-table
hardware/airbrake_pcb/components/ul_BMP388/: QFN_BMP388_BOS.step
hardware/airbrake_pcb/components/ul_BMP388/KiCADv6/: 2026-05-13_10-22-29.kicad_sym
hardware/airbrake_pcb/components/ul_ESDA7P60-1U1M/: ZDO_1610_STM.step
hardware/airbrake_pcb/components/ul_ESDA7P60-1U1M/KiCADv6/: 2026-05-13_10-33-40.kicad_sym
hardware/airbrake_pcb/components/ul_IRLML6344TRPBF/: IRLML6344TRPBF_INF.step
hardware/airbrake_pcb/components/ul_IRLML6344TRPBF/KiCADv6/: 2026-05-21_14-39-39.kicad_sym
hardware/airbrake_pcb/components/ul_LSM6DSV32XTR/: LGA-14L_2p5X3p0X0p86_STM.step
hardware/airbrake_pcb/components/ul_MPM3606AGQV-Z/: MPM3606AGQV.step
hardware/airbrake_pcb/components/ul_STM32H562RGT6/: LQFP64-10x10mm_STM.step
hardware/airbrake_pcb/components/ul_SX1280IMLTRT/: QFN24_4X4_SEM.step
hardware/airbrake_pcb/components/ul_TMC5240ATJ-T/: 21-0140_T32555C_ADI.step
hardware/airbrake_pcb/components/ul_W25Q64JVSSIQ/: SOIC-8_5P28X5P28_WIN.step
hardware/datasheets/: README.md
include/: ambar_airbrake.hpp  ambar_board_pins.hpp  ambar_device_constants.hpp  ambar_project_requirements.hpp
scripts/: build_flash_stm32.ps1  build_stm32_controller_bridge.ps1  continuous_hil_dashboard.py  continuous_hil_store.py  reconcile_desktop_firmware.ps1  run_all_simulations.ps1  run_continuous_hil.ps1  run_continuous_hil.py  run_monte_carlo.ps1  run_rocketpy_sim.ps1  run_sandboxes.ps1  run_simulation_ui.ps1  run_variable_hil.ps1  run_variable_hil.py  setup_hil.ps1  setup_rocketpy.ps1  simulation_ui_server.py  test_continuous_hil_dashboard.py  validate_monte_carlo_output.py  validate_rocketpy_output.py  variable_hil_store.py
sim/: actuator_sandbox.cpp  controller_bridge.cpp  electronics_sandbox.cpp  fault_replay_sandbox.cpp  flight_sandbox.cpp  monte_carlo_sandbox.cpp  stm32_controller_bridge.c
sim/replay/: nominal_vertical_log.csv
sim/rocketpy/: ambar_reference_config.json  j420r.eng  m5_control_calibration.py  monte_carlo_config.json  run_monte_carlo.py  run_rocketpy_sim.py  test_m5_control.py  test_monte_carlo.py  variable_hil_m5_config.json  variable_hil_m5_proportional_overlay.json  variable_hil_monte_carlo_config.json
src/: ambar_airbrake.cpp  main.cpp
tests/: ambar_core_tests.cpp
tools/arduino_ground_receiver/: README.md
tools/arduino_ground_receiver/ambar_sx1280_ground_receiver/: ambar_sx1280_ground_receiver.ino
tools/arduino_ide_shortcut/: README.md
ui/: app.js  index.html  styles.css
ui/continuous_hil/: app.js  index.html  styles.css
(+32 files in other folders)
